--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ p{
 }
 .container{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background: #e4e4e4;
@@ -38,7 +39,6 @@ p{
     border:1px solid rgb(41, 41, 41);
     height: 10px;
     width: 10px;
-    background-color:#ffffff;
 }
 
 .shortest-path-cell{
@@ -46,4 +46,14 @@ p{
 }
 .grid-row{
     display: flex;
+}
+
+.visited {
+    background-color: #ff0000;
+}
+.unvisited {
+    background-color: #ffffff;
+}
+.path{
+    background: #000000;
 }
